--- a/Next lesson finder/build.gradle
+++ b/Next lesson finder/build.gradle
@@ -4,32 +4,36 @@ plugins {
 
 android {
     namespace 'com.example.schoolcalenderchecker'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId 'com.nextlesson.finder'
         minSdk 30
-        targetSdk 33
-        versionCode 6
-        versionName "1.1.6"
+        targetSdk 34
+        versionCode 7
+        versionName "1.1.7"
 
     }
 
     buildTypes {
         release {
             //the following lines are used for optimizing the app's performance
+            /*
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile(
                     'proguard-android-optimize.txt'),
                     'proguard-rules.pro'
 
-            debuggable false
+             */
+
+            debuggable true
         }
         debug {
-            debuggable false
+            debuggable true
         }
     }
+
     buildFeatures {
         viewBinding true
     }
@@ -40,15 +44,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:18.1.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.wear:wear:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.google.android.gms:play-services-wearable:18.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.1'
+    implementation 'androidx.wear.watchface:watchface-complications-data-source-ktx:1.2.1'
 
 }
